# komentoj

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  LICENSE  README.md  config.toml  docker-compose.e2e.yml
.github/workflows/: ci.yml  docker.yml  docs.yml  e2e.yml
crates/komentoj/: Cargo.toml
crates/komentoj-core/: Cargo.toml
crates/komentoj-core/migrations/: 001_init.sql  003_multi_user.sql
crates/komentoj-core/src/: config.rs  error.rs  lib.rs  state.rs  test_helpers.rs
crates/komentoj-core/src/ap/: actor.rs  fetch.rs  inbox.rs  mod.rs  publish.rs  types.rs
crates/komentoj-core/src/api/: admin.rs  comments.rs  mod.rs  posts.rs
crates/komentoj/src/: main.rs
docs/: index.md  package.json  security.md
docs/.vitepress/: config.ts
docs/activitypub/: endpoints.md  how-it-works.md
docs/api/: get-comments.md  sync-posts.md
docs/guide/: blog-integration.md  configuration.md  deployment.md  getting-started.md  introduction.md
e2e/: Caddyfile  komentoj.toml  setup.sh  test.sh
e2e/gotosocial/: docker-compose.yml  setup.sh  test.sh
e2e/mastodon/: Caddyfile  docker-compose.yml  entrypoint.sh  komentoj.toml  setup.sh  test.sh
e2e/multi-user/: docker-compose.yml  komentoj.toml  test.sh
migrations/: 002_posts.sql
src/: config.rs  error.rs  main.rs  state.rs  test_helpers.rs
src/ap/: actor.rs  fetch.rs  html.rs  inbox.rs  publish.rs  signature.rs  types.rs
src/api/: comments.rs  mod.rs  posts.rs
