[package]
name = "komentoj"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "ActivityPub comment server for static blogs — single-node binary."

[[bin]]
name = "komentoj"
path = "src/main.rs"

[dependencies]
komentoj-core = { path = "../komentoj-core" }

tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
